...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="text" />

    </com.xffffff.wellfed.common.RequiredTextInputLayout>

    <com.xffffff.wellfed.common.RequiredDateTextInputLayout
        android:id="@+id/bestBeforeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/best_before_date"
...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestBeforeInput">

        <AutoCompleteTextView
            android:id="@+id/categoryInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:labelFor="@+id/categoryInput" />
    </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>

...
        app:layout_constraintEnd_toStartOf="@+id/unitInput"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal" />
    </com.xffffff.wellfed.common.RequiredNumberTextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/amountInput"
        app:layout_constraintTop_toBottomOf="@+id/categoryInput">

        <AutoCompleteTextView
            android:id="@+id/unitInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit"
            android:inputType="none"
            android:labelFor="@+id/unitInput" />
    </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>
...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountInput">

        <AutoCompleteTextView
            android:id="@+id/locationInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:labelFor="@+id/locationInput" />
    </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ingredient_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_baseline_save_24"
...
