...
                android:hint="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MealPlan_TitleEditInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.xffffff.wellfed.common.RequiredTextInputLayout>

            <com.xffffff.wellfed.common.RequiredDateTextInputLayout
                android:id="@+id/dateTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/date"
...
                android:hint="@string/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTextInput">

                <AutoCompleteTextView
                    android:id="@+id/MealPlan_CategoryEditInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>

            <com.xffffff.wellfed.common.RequiredNumberTextInputLayout
...
                android:hint="@string/number_of_servings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MealPlan_NumberOfServingsEditInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.xffffff.wellfed.common.RequiredNumberTextInputLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/recipeEditFragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberOfServingsTextInput"
                tools:layout="@layout/fragment_edit_recycler_view" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/ingredientEditFragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
...
                tools:layout="@layout/fragment_edit_recycler_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
