...
                android:layout_marginEnd="16dp"
                android:hint="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_img">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.xffffff.wellfed.common.RequiredTextInputLayout>

            <com.xffffff.wellfed.common.RequiredNumberTextInputLayout
                android:id="@+id/recipe_prep_time_textView"
...
                android:hint="Preparation Time (minutes)"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_prep_time_textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.xffffff.wellfed.common.RequiredNumberTextInputLayout>


...
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_prep_time_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_no_of_servings_textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.xffffff.wellfed.common.RequiredNumberTextInputLayout>


...
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_no_of_servings_textView">

                <AutoCompleteTextView
                    android:id="@+id/recipe_category_textEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category" />
            </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>


...
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comments"
                    android:inputType="text" />

            </com.xffffff.wellfed.common.RequiredTextInputLayout>
...
