...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="text" />

    </com.xffffff.wellfed.common.RequiredTextInputLayout>
...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput">

        <AutoCompleteTextView
            android:id="@+id/edit_categoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:labelFor="@+id/edit_categoryInput" />
    </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>

...
        app:layout_constraintEnd_toStartOf="@+id/unitInput"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_amountInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal" />
    </com.xffffff.wellfed.common.RequiredNumberTextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/amountInput"
        app:layout_constraintTop_toBottomOf="@+id/categoryInput">

        <AutoCompleteTextView
            android:id="@+id/edit_unitInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit" />
    </com.xffffff.wellfed.common.RequiredDropdownTextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
